--- a/existence_hashing/templates/existence_hashing/index.html
+++ b/existence_hashing/templates/existence_hashing/index.html
@@ -13,20 +13,28 @@
 
 	<ul>
 		<li><a href="/existence/stats/">Database Statistics</a></li>
-		
 	</ul>
 
-<form role="form" action="/existence/generate/" method="post">
+	<ul>
+		<li><a href="/control/">Control Authentication Page</a></li>
+	</ul>
+
+<form role="form" action="/existence/generate/" method="POST" > {% csrf_token %}
 	<div class="form-group">
-		<select class="form-control">
+		<select class="form-control" name="dropdown" id="id_dropdown">
 	 		{% if set_countries %}
 				{% for country in set_countries %}
-					<option>{{country}}</option>
+					<option>	{{country}}</option>
 				{% endfor %}
 			{% endif %}
 		</select>
 	</div>
-	<button type="submit" class="btn btn-default">Generate</button>
+	<button type="submit" class="btn btn-primary">Generate</button>
+
+	<a id="mybutton" href="/existence/generate/all/" title="link to google.com">
+		<button type="button" class="btn btn-warning">Generate All</button>
+ 	</a>
+
 </form>
 {% endblock %}
 
